2000-06-19  Sven Wischnowsky  <wischnow@zsh.org>

	* 11982: Test/comptest: update comptest to not set ZLS_COLORS
 	directly
	
	* 11981: Src/Zle/computil.c: more careful when optimising patterns
 	in compfiles
	
	* 11977: Completion/Core/_options, Completion/Core/_set_options,
 	Completion/Core/_unset_options, Doc/Zsh/compwid.yo,
 	Src/Zle/comp.h, Src/Zle/complete.c, Src/Zle/compmatch.c,
 	Test/54compmatch.ztst: new match spec characters bBeE, match only
 	word/line not both
	
	* 11973: Completion/Builtins/_zstyle, Completion/Core/_description,
 	Completion/Core/_expand, Doc/Zsh/compsys.yo, Src/Zle/zle_tricky.c:
 	allow _expand to expand braces; better detection of braces to
 	complete inC
	
2000-06-19  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* unpost: additions to Completion/Commands/.distfiles and
	.distfiles.

	* users/3189: Functions/Misc/zmv:  use depth-first ordering with
	**/; ignore files whose names are unchanged by the substitution.

2000-06-19  Sven Wischnowsky  <wischnow@zsh.org>

	* 11971: Completion/Core/_path_files, Doc/Zsh/compsys.yo,
 	Src/Zle/compcore.c, Src/Zle/computil.c: improve filename
 	completion; use accept-exact for in-path completion; new fake style
	
	* users/3188: Completion/Core/_description, Completion/Core/_setup,
 	Doc/Zsh/compsys.yo: restore ZLS_COLORS when possible; better
 	group-name handling in ZLS_COLORS
	
2000-06-17  Clint Adams  <schizo@debian.org>

	* 11966: Completion/Core/_main_complete: use double brackets
	around comparison to prevent 'command not found: no' error.

2000-06-17  Bart Schaefer  <schaefer@zsh.org>

	* 11961: Src/subst.c: 11959 was really a bug in magicequalsubst,
	it shouldn't have treated x:=y as a reason to expand =y.

2000-06-17  Tanaka Akira  <akr@zsh.org>

	* 11959: Completion/User/_urls: make it magicequalsubst aware.

	* 11958: Completion/User/_java: new completion for Java.

2000-06-17  Bart Schaefer  <schaefer@zsh.org>
